Fix typos in closing ENABLE() comments https://bugs.webkit.org/show_bug.cgi?id=179869

Unreviewed.


Source/JavaScriptCore:

* wasm/WasmMemory.h:
* wasm/WasmMemoryMode.h:

Source/WebCore:

* platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.h:
* platform/mediastream/mac/CoreAudioCaptureDeviceManager.h:


Canonical link: https://commits.webkit.org/195897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225028 268f45cc-cd09-0410-ab3c-d52691b4dbfc