Source/WebCore/platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.h
@@ -62,4 +62,4 @@ private:
 
 } // namespace WebCore
 
-#endif // ENABLE(MEDIA_STREAM && PLATFORM(IOS)
+#endif // ENABLE(MEDIA_STREAM) && PLATFORM(IOS)
